Add Database Route
