# app/Http/Requests/AddressRequest.php
@@ -4,7 +4,7 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class RegisterRequest extends FormRequest
+class AddressRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -24,17 +24,9 @@ class RegisterRequest extends FormRequest
     public function rules()
     {
         return [
-            'phone' => 'required|unique:users,phone',
-            'fio' => 'required|string',
-            'password' => 'required|string',
-        ];
-    }
-
-    public function messages()
-    {
-        return [
-            'phone.unique' => 'Данный телефон занят',
-            'email.required' => 'Данная почта занята',
+            'city' => 'required|string',
+            'street' => 'required|string',
+            'house' => 'required|integer',
         ];
     }
 }
